# simple-api-rust-axum

./: Cargo.toml  LICENSE  README.md
src/: handler.rs  main.rs  model.rs  respose.rs  route.rs
